css/index.css
@import url("https://fonts.googleapis.com/css2?family=Montaga&family=Montserrat:ital,wght@0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800&family=Playfair+Display&display=swap");

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Montserrat", sans-serif;
}

html::-webkit-scrollbar {
  width: 0.5em;
}

html::-webkit-scrollbar-track {
  box-shadow: none;
  background: #000;
}

body {
  background: #fff;
}

html::-webkit-scrollbar-thumb {
  background: #fff;
  border-radius: 15px;
  border: none;
}

.nav {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  background: #000000;
  color: #fff;
  z-index: 999;
}

header {
  display: flex;
  flex-direction: column;
  height: 100vh;
  color: #fff;
  background: #000000;
}

.nav-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0.25rem 1rem;
}

.name {
  text-decoration: none;
  font-size: 1.5rem;
  font-weight: 500;
  margin: 1.2rem;
  padding-top: 0.5rem;
  color: #fff;
}

.hamburger-btn {
  background: none;
  width: 2rem;
  background: none;
  margin-right: 1rem;
}

.hamburger-btn span {
  display: block;
  height: 2px;
  background: #fff;
  margin: 8px 0;
  transition: all 0.3s ease-in-out;
}

.nav-links {
  height: 0;
  overflow: hidden;
  list-style-type: none;
  background: #333333;
  transition: all 0.3s ease-in-out;
}

.single-link {
  display: block;
  text-decoration: none;
  font-size: 1.2rem;
  padding: 0.5rem;
  margin: 0.5rem 0;
  text-align: right;
  color: #fff;
  transition: all 0.3s ease-in;
}

.single-link:hover {
  color: #111;
  background: #eeeeee;
  transform: translateX(-0.5rem);
}

.show-links {
  height: 205px;
}

.hamburger-btn.animate span:nth-child(1) {
  transform: rotate(135deg);
  top: 18px;
}

.hamburger-btn.animate span:nth-child(2) {
  opacity: 0;
  left: -60px;
}

.hamburger-btn.animate span:nth-child(3) {
  transform: rotate(-135deg);
  top: 18px;
}

@media screen and (min-width: 768px) {
  html::-webkit-scrollbar {
    width: 1em;
  }
  .hamburger-btn {
    display: none;
  }
  .name {
    margin: 0;
    padding: 0;
  }
  .nav-header {
    margin: 1rem;
    padding: 1rem;
  }
  .nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }
  .nav-links {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
    align-items: center;
    height: auto;
    background: none;
  }
  .single-link {
    margin: 1.2rem;
    flex: 1 0 auto;
  }
  .single-link:hover {
    transform: unset;
  }
}

.hero-container {
  position: relative;
  top: 5rem;
  flex: 1 0 auto;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
}

.hero-heading {
  font-family: "Montaga";
  font-size: 2rem;
  letter-spacing: 0.25rem;
  margin: 2rem;
  padding: 0.5rem 0;
}

.hero-para {
  font-size: 1rem;
  margin: 1rem 2rem;
  padding: 1rem 0;
  max-width: 20rem;
  line-height: 1.5rem;
  color: #dddddd;
  margin-top: 0;
  padding-top: 0;
}
.btn {
  margin: 1rem 0;
  padding: 1rem 0;
}

.download-cv-btn {
  font-size: 0.8rem;
  margin: 2rem;
  text-decoration: none;
  padding: 1rem 1rem;
  background: #79cef9;
  border-radius: 6px;
  color: #111;
  transition: all 0.3s ease;
}

.download-cv-btn:hover {
  background: #0074ad;
  color: #dddddd;
}

.banner-img {
  position: absolute;
  bottom: 0;
  right: 0;
  width: 60%;
}

@media screen and (min-width: 768px) {
  .hero-heading {
    position: relative;
    max-width: 60%;
    line-height: 4.5rem;
    font-size: 3.5rem;
  }
  .hero-para {
    font-size: 1.5rem;
    line-height: 2.1rem;
    max-width: 40rem;
  }
  .download-cv-btn {
    font-size: 1.2rem;
    padding: 1rem 1.2rem;
  }
  .banner-img {
    position: absolute;
    display: block;
    right: 0;
    bottom: 0;
    width: 30%;
  }
}
.skills {
  background: #fff;
  height: auto;
  color: #000000;
}

.section-name {
  text-align: center;
  padding: 1rem;
  margin-top: 1rem;
}
.section-title {
  font-size: 3rem;
}
.section-title-style {
  display: block;
  margin: 0 auto;
  margin: 0.5rem auto;
  height: 2px;
  width: 2.5rem;
  background: #000000;
}

.skills-center {
  width: 90vw;
  margin: 2rem auto;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}

.skill-icon {
  color: #111111;
  font-size: 4rem;
  padding: 0.5rem;
  margin: 1rem 0;
}

.skill-title {
  font-size: 1.2rem;
  color: #333333;
  margin: 0.5rem 0;
}

.single-skill-container {
  text-align: center;
  padding: 1.5rem;
  flex: 1 0 calc(50% - 0.5rem);
  transition: all 0.3s ease;
}
.single-skill-container:hover {
  transform: translateY(-1rem);
  background: #dddddd;
}

@media screen and (min-width: 611px) {
  .section-title {
    font-size: 3.5rem;
    margin: 1rem 0;
  }
  .single-skill-container {
    padding: 2.5rem;
    flex: 1 0 calc(25% - 0.3rem);
  }
  .skill-icon {
    font-size: 5rem;
    margin: 2rem 0;
  }
  .skill-title {
    margin: 1rem 0;
  }
}

/* Footer */
.footer {
  margin-top: 4rem;
  background: #000;
  color: #fff;
  padding: 2rem;
  text-align: center;
}

.footer-text {
  letter-spacing: 0.2rem;
  margin: 1rem;
}

.footer-icon {
  text-decoration: none;
  color: #fff;
  font-size: 1.5rem;
  margin: 0.5rem 0.5rem;
  padding: 0.5rem 0.5rem;
  transition: all 0.3s ease;
}

.footer-icon:hover {
  background: #aaa;
  color: #111;
}

